--- a/web-app/package.json
+++ b/web-app/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "classnames": "^2.2.6",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby": "^2.20.12",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-sass": "^2.2.1",
@@ -35,7 +36,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.1.0",   
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-loader": "^4.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
